log
Sun, Apr 20, 2025  8:09:32 PM: 
 tests:  0|6
total_score: 0/70
eeef3b7
Sun, Apr 20, 2025  8:32:07 PM: 
 hashmap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
a72bf47
Sun, Apr 20, 2025  8:49:24 PM: 
 hashmap.c | 19 ++++++++++++++++---
 1 file changed, 16 insertions(+), 3 deletions(-)
 tests:  0|0
704d04b
Sun, Apr 20, 2025  8:50:29 PM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:46:67: error: 'return' with a value, in function returning void [-Werror]
            if (is_equal(key, map->buckets[posicion]->key)) return NULL;
                                                                   ^~~~
hashmap.c:41:6: note: declared here
 void insertMap(HashMap * map, char * key, void * value) {
      ^~~~~~~~~
hashmap.c:53:60: error: 'return' with a value, in function returning void [-Werror]
     if (is_equal(key, map->buckets[posicion]->key)) return NULL;
                                                            ^~~~
hashmap.c:41:6: note: declared here
 void insertMap(HashMap * map, char * key, void * value) {
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
0cca6de
Sun, Apr 20, 2025  8:51:05 PM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
04f29b1
Sun, Apr 20, 2025  8:54:59 PM: 
 hashmap.c | 39 +++++++++++++++++++++++++++++----------
 1 file changed, 29 insertions(+), 10 deletions(-)
 tests:  5|4
total_score: 30/70
cb0b3b4
Sun, Apr 20, 2025  9:21:24 PM: 
 hashmap.c | 35 ++++++++++++++++++-----------------
 1 file changed, 18 insertions(+), 17 deletions(-)
 tests:  5|4
total_score: 30/70
143cf93
Sun, Apr 20, 2025  9:30:39 PM: 
 hashmap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:111:10: error: unused variable 'inicio' [-Werror=unused-variable]
     long inicio = posicion;
          ^~~~~~
cc1.exe: all warnings being treated as errors
56acc42
Sun, Apr 20, 2025  9:31:11 PM: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  6|4
total_score: 30/70
2136aae
Sun, Apr 20, 2025  9:32:04 PM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  8|3
total_score: 40/70
b33f646
Sun, Apr 20, 2025  9:36:01 PM: 
 hashmap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  8|3
total_score: 40/70
23c6c36
Sun, Apr 20, 2025  9:36:55 PM: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  8|3
total_score: 40/70
256a18d
